objects/Goods__c.object
<CustomObject>
    <fields>
        <fullName>Donation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Donation</label>
        <referenceTo>Donation__c</referenceTo>
        <relationshipLabel>Goods</relationshipLabel>
        <relationshipName>Goods</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Moving__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Moving</label>
        <referenceTo>Goods_moving__c</referenceTo>
        <relationshipLabel>Goods</relationshipLabel>
        <relationshipName>Goods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NameOfProduct__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name of product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCategory__c</fullName>
        <formula>Product__r.ProductCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Goods</relationshipLabel>
        <relationshipName>Goods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <description>Unit of the product</description>
        <formula>IF(
ISPICKVAL(Product__r.Units__c,&apos;Items&apos;),
&apos;Штуки&apos;,
&apos;&apos;
)+
IF(
ISPICKVAL(Product__r.Units__c,&apos;Tins&apos;),
&apos;Банки&apos;,
&apos;&apos;
)+
IF(
ISPICKVAL(Product__r.Units__c,&apos;kg&apos;),
&apos;Кілограми&apos;,
&apos;&apos;
)+
IF(
ISPICKVAL(Product__r.Units__c,&apos;packs&apos;),
&apos;Упаковки&apos;,
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Units</label>
        <type>Text</type>
    </fields>
    <label>Goods</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Donation__c</columns>
        <columns>NAME</columns>
        <columns>Quantity__c</columns>
        <columns>Moving__c</columns>
        <columns>NameOfProduct__c</columns>
        <columns>Product__c</columns>
        <columns>ProductCategory__c</columns>
        <columns>Units__c</columns>
        <columns>Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Good-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>